# jlRDKit

./: .gitignore  CMakeLists.txt
src/: rdkit_module.cpp  rdkit_shims.cpp  rdkit_shims.h  rdkit_wrapper.cpp  wrapit_integration.cpp
